--- a/README
+++ b/README
@@ -1,3 +1,7 @@
+Author:
+Daniel Chan (MMU Malaysia)
+Eric Teo (MMU Malaysia)
+
 ## License
 This project is licensed under the Creative Commons Attribution-NonCommercial 4.0 International License (CC BY-NC). 
 You are free to share and adapt the code for non-commercial purposes, but commercial use is strictly prohibited.
