--- a/README
+++ b/README
@@ -134,7 +134,8 @@ MainProgram: Launches the game.
 
 
 ## License
-This project is licensed under the Creative Commons Attribution-NonCommercial 4.0 International License (CC BY-NC). 
+This project is licensed under the [Creative Commons Attribution-NonCommercial 4.0 International License (CC BY-NC)]
+(https://creativecommons.org/licenses/by-nc/4.0/).
 You are free to share and adapt the code for non-commercial purposes, but commercial use is strictly prohibited.
 
 Kwazam Chess Game © 2025 by Daniel Chan is licensed under CC BY-NC 4.0.
