--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Project: Kwazam Chess Game
 ## Authors:
 - **Daniel Chan** (MMU Malaysia)
-- **Eric Teo** (MMU Malaysia)
+- **Alex Teo** (MMU Malaysia)
 
 =====Introduction=====
 Kwazam Chess is a unique chess-like game with custom rules and pieces. This project is implemented in Java and features 
